--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <ol>
            <li class="principal"> Primer plato</li>
             <ol>
-                <li class="principal">Arroz al horno</li>
-                <li class="principal">Paella</li>
-                <li class="principal">Fideua</li>
+                <li class="numeros">Arroz al horno</li>
+                <li class="numeros">Paella</li>
+                <li class="numeros">Fideua</li>
                 <ul>
                     <li class="variante">De Gandia</li>
                     <li class="variante">De boletus</li>
